--- a/assets/templates/forex/templates/account-comparison.html
+++ b/assets/templates/forex/templates/account-comparison.html
@@ -79,8 +79,68 @@
       </div>
       <div id="Forex" class="tab__content  tab__content--forex">
         <div class="tab__origin">
-          <h3>Forex</h3>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <table>
+            <tr>
+              <th>Symbol</th>
+              <th>Average Floating Spreads in pips</th>
+              <th>Commission</th>
+              <th>Position Size Per Lot</th>
+              <th>1 Pip Value Per Lot</th>
+              <th>Min Position Size</th>
+              <th>Max Position Size</th>
+              <th>Leverage Up To</th>
+            </tr>
+            <tr>
+              <td>AUDJPY</td>
+              <td>3.29</td>
+              <td>NO</td>
+              <td>100000 AUD</td>
+              <td>1000 JPY</td>
+              <td>0.01 Lots</td>
+              <td>500 Lots</td>
+              <td>50:01:00</td>
+            </tr>
+            <tr>
+              <td>AUDUSD</td>
+              <td>2.9</td>
+              <td>NO</td>
+              <td>100000 AUD</td>
+              <td>10 USD</td>
+              <td>0.01 Lots</td>
+              <td>500 Lots</td>
+              <td>50:01:00</td>
+            </tr>
+            <tr>
+              <td>CHFJPY</td>
+              <td>3.9</td>
+              <td>NO</td>
+              <td>100000 CHF</td>
+              <td>1000 JPY</td>
+              <td>0.01 Lots</td>
+              <td>500 Lots</td>
+              <td>50:01:00</td>
+            </tr>
+            <tr>
+              <td>EURAUD</td>
+              <td>3.3</td>
+              <td>NO</td>
+              <td>100000 EUR</td>
+              <td>10 AUD</td>
+              <td>0.01 Lots</td>
+              <td>500 Lots</td>
+              <td>50:01:00</td>
+            </tr>
+            <tr>
+              <td>EURCAD</td>
+              <td>3.7</td>
+              <td>NO</td>
+              <td>100000 EUR</td>
+              <td>10 CAD</td>
+              <td>0.01 Lots</td>
+              <td>500 Lots</td>
+              <td>50:01:00</td>
+            </tr>
+          </table>
         </div>
       </div>
       <div id="Commodities" class="tab__content  tab__content--commodities">
