--- a/assets/templates/forex/sass/blocks/tabs.scss
+++ b/assets/templates/forex/sass/blocks/tabs.scss
@@ -1,22 +1,20 @@
 .tab {
   display: flex;
-  justify-content: center;
   overflow: hidden;
-  // background-color: #f1f1f1;
 }
 
 .tab button {
-  // float: right;
+  margin-right: 10px;
+  padding: 14px 16px;
+  font-size: 17px;
   border: none;
   outline: none;
   cursor: pointer;
-  padding: 14px 16px;
   transition: 0.3s;
-  font-size: 17px;
 }
 
 .tab button.active {
-  padding: 14px 40px;
+  padding: 0 40px;
   font-weight: bold;
 }
 
@@ -24,6 +22,7 @@
   display: none;
   padding: 6px 12px;
   border-top: none;
+  background: #dc9554;
   
   &--forex {
     border: 5px solid $mc;
