--- a/assets/templates/forex/templates/account-comparison.html
+++ b/assets/templates/forex/templates/account-comparison.html
@@ -79,7 +79,7 @@
       </div>
       <div id="Forex" class="tab__content  tab__content--forex">
         <div class="tab__origin">
-          <table>
+          <table class="tab__bronze">
             <tr>
               <th>Symbol</th>
               <th>Average Floating Spreads in pips</th>
@@ -139,6 +139,40 @@
               <td>0.01 Lots</td>
               <td>500 Lots</td>
               <td>50:01:00</td>
+            </tr>
+          </table>
+          
+          <table class="tab__silver">
+            <tr>
+              <th>Symbol</th>
+              <th>Average Floating Spreads in pips</th>
+              <th colspan="3">
+                Commission Per Lot
+                <table>
+                  <tr>
+                    <td>USD</td>
+                    <td>EUR</td>
+                    <td>GBP</td>
+                  </tr>
+                </table>
+              </th>
+              <th>Position Size Per Lot</th>
+              <th>1 Pip Value Per Lot</th>
+              <th>Min Position Size</th>
+              <th>Max Position Size</th>
+              <th>Leverage Up To</th>
+            </tr>
+            <tr>
+              <td>AUDJPY</td>
+              <td>2.29</td>
+              <td>5.90 USD</td>
+              <td>5.50 EUR</td>
+              <td>4.90 GBP</td>
+              <td>100000 AUD</td>
+              <td>1000 JPY</td>
+              <td>0.01 Lots</td>
+              <td>500 Lost</td>
+              <td>400:01:00</td>
             </tr>
           </table>
         </div>
