--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -1624,7 +1624,8 @@ button[type="submit"] {
     width: 100%;
     color: #fff;
     font-size: 13px;
-    text-align: center; }
+    text-align: center;
+    border-collapse: collapse; }
     .account-comparison table td {
       padding: 5px; }
 
@@ -1653,6 +1654,9 @@ button[type="submit"] {
 .account-comparison__bronze:hover {
   background: #dc9554; }
 
+.test {
+  background: red; }
+
 .account-comparison__silver:hover {
   background: #9b9b9b; }
 
@@ -1670,17 +1674,20 @@ button[type="submit"] {
   overflow: hidden; }
 
 .tab button {
-  margin-right: 10px;
-  padding: 14px 16px;
+  width: 100%;
+  height: 37px;
+  margin-right: 2px;
   font-size: 17px;
   border: none;
+  border-top-left-radius: 9px;
+  border-top-right-radius: 9px;
   outline: none;
   cursor: pointer;
   -webkit-transition: 0.3s;
   transition: 0.3s; }
 
 .tab button.active {
-  padding: 0 40px;
+  padding: 0px 40px;
   font-weight: bold; }
 
 .tab__content {
@@ -1689,6 +1696,7 @@ button[type="submit"] {
   border-top: none;
   background: #dc9554; }
   .tab__content--forex {
+    display: block;
     border: 5px solid #2e2963; }
   .tab__content--commodities {
     border: 5px solid green; }
@@ -1700,6 +1708,9 @@ button[type="submit"] {
     border: 5px solid orange; }
   .tab__content--stocks {
     border: 5px solid tomato; }
+
+.tab__silver {
+  display: none; }
 
 .forex {
   color: #fff;
