--- a/assets/templates/forex/sass/blocks/tabs.scss
+++ b/assets/templates/forex/sass/blocks/tabs.scss
@@ -4,17 +4,21 @@
 }
 
 .tab button {
-  margin-right: 10px;
-  padding: 14px 16px;
+  width: 100%;
+  height: 37px;
+  margin-right: 2px;
+  // padding: 14px 16px;
   font-size: 17px;
   border: none;
+  border-top-left-radius: 9px;
+  border-top-right-radius: 9px;
   outline: none;
   cursor: pointer;
   transition: 0.3s;
 }
 
 .tab button.active {
-  padding: 0 40px;
+  padding: 0px 40px;
   font-weight: bold;
 }
 
@@ -25,6 +29,7 @@
   background: #dc9554;
   
   &--forex {
+    display: block;
     border: 5px solid $mc;
   }
   
@@ -47,6 +52,10 @@
   &--stocks {
     border: 5px solid tomato;
   }
+}
+
+.tab__silver {
+  display: none;
 }
 
 .forex {
