--- a/assets/templates/forex/sass/blocks/account-comparison.scss
+++ b/assets/templates/forex/sass/blocks/account-comparison.scss
@@ -8,8 +8,15 @@
     text-align: center;
     border-collapse: collapse;
     
+    & th {
+      padding: 15px 0;
+      border-bottom: 2px solid #fff;
+      background: #c47935;
+    }
+    
     & td {
       padding: 5px;
+      border-bottom: 1px solid #fff;
     }
   }
 }
