--- a/assets/templates/forex/sass/blocks/tabs.scss
+++ b/assets/templates/forex/sass/blocks/tabs.scss
@@ -24,7 +24,7 @@
 
 .tab__content {
   display: none;
-  padding: 6px 12px;
+  // padding: 6px 12px;
   border-top: none;
   background: #dc9554;
   
