--- a/assets/templates/crypto/template/terms.html
+++ b/assets/templates/crypto/template/terms.html
@@ -163,7 +163,7 @@
         </ul>
         <p class="page-main__about--title">Procedure for returning funds</p>
         <p>If there is a situation where the user`s funds should be returned, the money will be transferred to his account in two working days. Depending on the method used for transferring the money, the time it takes for the process to be completed might vary. Each refund application will be reviewed and confirmed by Cryptologi  after the user presents the proper documentation. Cryptologi will do what it can do offer assistance and resolve the issue.</p>
-        <p class="page-main--pb">Keyds Lydya Ltd<br>Trust Company Complex, Ajeltake Road, Ajeltake Island, Majuro<br>Marshall Islands, MH 96960</p>
+        <p class="page-main--pb">Trust Company Complex, Ajeltake Road, Ajeltake Island, Majuro<br>Marshall Islands, MH 96960</p>
       </div>
     </div>
   </main>
