--- a/assets/templates/forex/sass/style.scss
+++ b/assets/templates/forex/sass/style.scss
@@ -30,4 +30,5 @@
 @import 'blocks/account-comparison';
 @import 'blocks/tabs';
 @import 'blocks/product-specification';
-@import 'blocks/resources';
+@import 'blocks/glossary';
+@import 'blocks/registration';
