--- a/assets/templates/forex/templates/registration.html
+++ b/assets/templates/forex/templates/registration.html
@@ -4,9 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About Us - Forex 24</title>
-  <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
+  <title>Registration - Forex 24</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -37,7 +35,7 @@
   <section class="sub-menu">
     <div class="container">
       <div class="sub-menu__flex">
-        <p>About Us</p>
+        <p>Registration</p>
         <div class="sub-menu__box  sub-menu__box--about">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
@@ -61,16 +59,23 @@
       </div>
     </div>
   </section>
-  <section class="about">
+  <section class="registration">
     <div class="container">
-      <h1>An Introduction to Excellence<br>Forex 24 Global – Your Gateway to Financial Markets</h1>      
-      <p>The makers of Forex24 Global are all field experts with many years of experience behind their backs. A Forex outlet made to meet the expectations of even the pickiest traders. It enables you to trade with a wide portfolio of diverse assets on markets all around the globe, all the while providing great features and superb support for its customers. We always place our users first. That is why we strive for perfection and look for ways to make trading better, even in the smallest of details. Forex24 Global is here to be your trading partner at all times.</p>
-      <b>Striving for greatness</b>
-      <p>Forex24 Global takes all the factors needed for succeeding in the trading field and puts them together to bring you the optimum platform – functional, feature packed, easy to use, secure and reliable. We are constantly working and improving while staying on top of the latest developments in the field. Increasing the number of tradable assets and improving user experience are just some of the things we constantly work on.</p>
-      <b>User Support</b>
-      <p>We are always there to address any issues our customers might experience regarding the platform or trading in general. We want to ensure that your trading experience is as swift and pleasant as it can be, giving you all you need in order to focus 100% on your trades. All the processes and functions of the platform have been designed to be as convenient as possible. Please let us know if you`re experiencing any issues or inconveniences and we`ll do everything we can to fix it. Forex24 Global has your back.</p>
-      <b>Being profitable</b>
-      <p class="about__pb">Naturally, the aim of Forex trading is to earn more money than you`ve invested. Therefore at Forex24 Global , one of our main goals is to empower you to fulfil this goals. Everything you need in order to make it is here, the rest is up to you. All the features of the website have been specially designed to aid our users. Our passion towards our customers is our main drive and what leads us forward. Trading involves risks of loss, for further information please read our Risk Disclosure.</p>
+      <form class="form" action="index.html" method="post">
+        <div class="form__flex">
+          <input type="text" placeholder="First name">
+          <input type="email" placeholder="E-mail">
+        </div>
+        <div class="form__flex">
+          <input type="text" placeholder="Last name">
+          <input type="tel" placeholder="Phone">
+        </div>
+        <select class="form__select" name="">
+          <option value="">Information</option>
+        </select>
+        <button type="submit" name="submit">Submit</button>
+        <textarea class="form__textarea" name="name" rows="8" placeholder="Message"></textarea>
+      </form>
     </div>
   </section>
   <section class="payment  payment--temp">
