--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -1627,9 +1627,7 @@ button[type="submit"] {
     text-align: center;
     border-collapse: collapse; }
     .account-comparison table th {
-      padding: 15px 0;
-      border-bottom: 2px solid #fff;
-      background: #c47935; }
+      padding: 15px 0; }
     .account-comparison table td {
       padding: 5px;
       border-bottom: 1px solid #fff; }
@@ -1659,9 +1657,6 @@ button[type="submit"] {
 .account-comparison__bronze:hover {
   background: #dc9554; }
 
-.test {
-  background: red; }
-
 .account-comparison__silver:hover {
   background: #9b9b9b; }
 
@@ -1675,21 +1670,20 @@ button[type="submit"] {
 .tab {
   display: -webkit-box;
   display: -ms-flexbox;
-  display: flex;
-  overflow: hidden; }
+  display: flex; }
 
 .tab button {
   width: 100%;
   height: 37px;
-  margin-right: 2px;
-  font-size: 17px;
+  margin: 0px 1px;
+  font-size: 16px;
   border: none;
-  border-top-left-radius: 9px;
-  border-top-right-radius: 9px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   outline: none;
   cursor: pointer;
-  -webkit-transition: 0.3s;
-  transition: 0.3s; }
+  -webkit-transition: 0.2s;
+  transition: 0.2s; }
 
 .tab button.active {
   padding: 0px 40px;
@@ -1713,8 +1707,18 @@ button[type="submit"] {
   .tab__content--stocks {
     border: 5px solid tomato; }
 
+.tab__bronze th {
+  background: #c47935; }
+
 .tab__silver {
-  display: none; }
+  display: none;
+  width: 100%; }
+  .tab__silver th {
+    background: #7f7a7a; }
+
+.tab__currency td {
+  padding: 0;
+  border: none !important; }
 
 .forex {
   color: #fff;
@@ -1832,13 +1836,13 @@ button[type="submit"] {
     padding: 25px;
     padding-left: 80px;
     color: #2e2963;
+    font-weight: bold;
     text-decoration: none;
     background: url("../img/faq.png") no-repeat left;
-    -webkit-transition: 0.1s;
-    transition: 0.1s; }
+    -webkit-transition: 0.2s;
+    transition: 0.2s; }
     .resources__faq a:hover {
-      font-size: 18px;
-      font-weight: bold; }
+      color: #f2c318; }
 
 @media screen and (max-width: 1200px) {
   .resources__flex {
