--- a/assets/templates/forex/sass/blocks/tabs.scss
+++ b/assets/templates/forex/sass/blocks/tabs.scss
@@ -1,20 +1,19 @@
 .tab {
   display: flex;
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 .tab button {
   width: 100%;
   height: 37px;
-  margin-right: 2px;
-  // padding: 14px 16px;
-  font-size: 17px;
+  margin: 0px 1px;
+  font-size: 16px;
   border: none;
-  border-top-left-radius: 9px;
-  border-top-right-radius: 9px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
   outline: none;
   cursor: pointer;
-  transition: 0.3s;
+  transition: 0.2s;
 }
 
 .tab button.active {
@@ -54,8 +53,34 @@
   }
 }
 
+.tab__bronze {
+    
+  & th {
+    // border-bottom: 2px solid #fff;
+    background: #c47935;
+  }
+  
+  // & td {
+  //   padding: 5px;
+  //   border-bottom: 1px solid #fff;
+  // }
+}
+
 .tab__silver {
   display: none;
+  width: 100%;
+  
+  & th {
+    background: #7f7a7a;
+  }
+}
+
+.tab__currency {
+  
+  & td {
+    padding: 0;
+    border: none !important;
+  }
 }
 
 .forex {
