--- a/assets/templates/crypto/template/legal.html
+++ b/assets/templates/crypto/template/legal.html
@@ -70,7 +70,7 @@
           <p>If any corrections are made, which change the policies and protocol for private data gathered by Cryptologi, the clients will be promptly informed about it. The client has the right to decide whether his private data will be used in a certain way. Any other change or correction which is not related to a client`s private date will be posted on the platform.</p>
           <p class="page-main__about--title">Mailing info</p>
           <p>In case you have any inquiries regarding the privacy protocol or something related to the platform, please feel free to contact us at any time. You can send us an e-mail, call us or fax us. There is always a dedicated Cryptologi employee to answer your questions.</p>
-          <p class="page-main__about--title  page-main--pb">Registered Address:<br>GRANIT OAK WORLDWIDE LIMITED, Igoumenitsas 12, , 2027 Nicosia, Cyprus<br>Mailing Address:<br>Igoumenitsas 12, , 2027 Nicosia, Cyprus</p>
+          <p class="page-main__about--title  page-main--pb">Registered Address:<br>GRANIT OAK WORLDWIDE LIMITED, Igoumenitsas 12, 2027 Nicosia, Cyprus<br>Mailing Address:<br>Igoumenitsas 12, 2027 Nicosia, Cyprus</p>
         </div>
       </div>
     </div>
@@ -107,7 +107,7 @@
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">Cryptology is a online trading and exchange platform ONLY. It does not carry out any substantial review or independent scrutiny of any blockchain asset, cryptocurrency or related funds. Every client is fully and solely responsible for evaluating your assets and deciding whether or not you want to carry out a blockchain asset exchange with Cryptologi. In so many instances, the blockchain asset you decide to exchange or trade on the basis of your personal findings may not increase or decrease in value, however the asset you have exchanged on the basis of your research may increase in value after the exchange. The past performances does not affect future results. Any investment in any cryptocurrency or blockchain asset involves the risk of a possibility of a loss of part or al of your investment. The value of the asset you trade or exchange is subject to market risk and other forms of investment risk.</p>
+      <p class="page-footer__copyright">Cryptologi is a online trading and exchange platform ONLY. It does not carry out any substantial review or independent scrutiny of any blockchain asset, cryptocurrency or related funds. Every client is fully and solely responsible for evaluating your assets and deciding whether or not you want to carry out a blockchain asset exchange with Cryptologi. In so many instances, the blockchain asset you decide to exchange or trade on the basis of your personal findings may not increase or decrease in value, however the asset you have exchanged on the basis of your research may increase in value after the exchange. The past performances does not affect future results. Any investment in any cryptocurrency or blockchain asset involves the risk of a possibility of a loss of part or al of your investment. The value of the asset you trade or exchange is subject to market risk and other forms of investment risk.</p>
     </div>
   </footer>
 </body>
