--- a/assets/templates/forex/templates/product-specification.html
+++ b/assets/templates/forex/templates/product-specification.html
@@ -69,6 +69,7 @@
         <button class="tab__link  metals" onclick="openTab(event, 'Precious Metals')">Precious Metals</button>
         <button class="tab__link  bonds" onclick="openTab(event, 'Bonds')">Bonds</button>
         <button class="tab__link  indices" onclick="openTab(event, 'Indices')">Indices</button>
+        <button class="tab__link  indices-f" onclick="openTab(event, 'IndicesF')">Indices-F</button>
         <button class="tab__link  stocks" onclick="openTab(event, 'Stocks')">Stocks</button>
       </div>
       <div id="Forex" class="tab__content  tab__content--forex">
@@ -93,6 +94,10 @@
       </div>
       <div id="Indices" class="tab__content  tab__content--indices">
         <h3>Indices</h3>
+        <p>Lorem ipsum dolor sit amet.</p>
+      </div>
+      <div id="IndicesF" class="tab__content  tab__content--indices-f">
+        <h3>IndicesF</h3>
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
       <div id="Stocks" class="tab__content  tab__content--stocks">
