--- a/crypto/template/faq.html
+++ b/crypto/template/faq.html
@@ -44,8 +44,8 @@
         <p><b>Premium Account</b> beginning at $20,000 USD</p>
         <p class="page-main__title">Which platform should you use?</p>
         <p>There are a variety of different platforms available from Cryptologi to meet the requirements of different traders with different circumstances.</p>
-        <p><b>Criptologi Webtrader</b> - download this popular, world-renowned desktop platform if you predominately trade in crypto currencies. It is both user-friendly and state-of-the-art.</p>
-        <p><b>Criptologi Mobile</b> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade form anywhere in the world, from a variety of devices.</p>
+        <p><b>Cryptologi Webtrader</b> - download this popular, world-renowned desktop platform if you predominately trade in cryptocurrencies. It is both user-friendly and state-of-the-art.</p>
+        <p><b>Cryptologi Mobile</b> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade form anywhere in the world, from a variety of devices.</p>
         <p class="page-main__title">What type of information do you need to give in order to trade?</p>
         <p>You are requested to give the following information for proof of identity upon registration:</p>
         <p>A certified, original copy of your passport or ID.</p>
