--- a/crypto/template/about.html
+++ b/crypto/template/about.html
@@ -34,14 +34,14 @@
       <div class="container__adv  container__adv--pm">
         <h1>About Us</h1>
         <p class="page-main__about--title">Cryptologi cryptocurrency exchange puts you first</p>
-        <p>Founded in 2017, Cypriot - based Cryptologi is a leading Bitcoin exchange in euro volume and liquidity and offering trading other cryptocurrency tokens. Cryptologi is consistently rated in the same line with the best and most secure Bitcoin exchange and develop high end technologies solutions for the crypto market.</p>
-        <p>We are partner with the most trusted liquidity providers and trusted by hundreds of thousands of traders around the world.</p>
+        <p>Founded in 2017, Cypriot - based Cryptologi is a leading Bitcoin exchange in euro volume and liquidity and offering trading other cryptocurrency tokens. Cryptologi is consistently rated in the same line with the best and most secure Bitcoin exchange and develop high-end technologies solutions for the crypto market.</p>
+        <p>We partner with the most trusted liquidity providers and trusted by hundreds of thousands of traders around the world.</p>
         <p class="page-main__about--title">Transparency</p>
-        <p>We believe transparency is a crucial demand as we are committed for the prices and transactions and for the processing of orders in our platforms.</p>
+        <p>We believe transparency is a crucial demand as we are committed to the prices and transactions and for the processing of orders in our platforms.</p>
         <p class="page-main__about--title">Professionalism</p>
         <p>We are dedicated to our product and your experience.</p>
         <p class="page-main__about--title">Guarantee</p>
-        <p class="page-main--pb">Your funds and tokens are guaranteed with segregated account, separate from client funds and audited by respected accountants and nominee.</p>
+        <p class="page-main--pb">Your funds and tokens are guaranteed with a segregated account, separate from client funds and audited by respected accountants and nominee.</p>
       </div>
     </div>
   </main>
@@ -77,7 +77,7 @@
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">Cryptologi is a online trading and exchange platform ONLY. It does not carry out any substantial review or independent scrutiny of any blockchain asset, cryptocurrency or related funds. Every client is fully and solely responsible for evaluating your assets and deciding whether or not you want to carry out a blockchain asset exchange with Cryptologi. In so many instances, the blockchain asset you decide to exchange or trade on the basis of your personal findings may not increase or decrease in value, however the asset you have exchanged on the basis of your research may increase in value after the exchange. The past performances does not affect future results. Any investment in any cryptocurrency or blockchain asset involves the risk of a possibility of a loss of part or al of your investment. The value of the asset you trade or exchange is subject to market risk and other forms of investment risk.</p>
+      <p class="page-footer__copyright">Cryptologi is an online trading and exchange platform ONLY. It does not carry out any substantial review or independent scrutiny of any blockchain asset, cryptocurrency or related funds. Every client is fully and solely responsible for evaluating your assets and deciding whether or not you want to carry out a blockchain asset exchange with Cryptologi. In so many instances, the blockchain asset you decide to exchange or trade on the basis of your personal findings may not increase or decrease in value, however, the asset you have exchanged on the basis of your research may increase in value after the exchange. The past performances do not affect future results. Any investment in any cryptocurrency or blockchain asset involves the risk of the possibility of a loss of part or all of your investment. The value of the asset you trade or exchange is subject to market risk and other forms of investment risk.</p>
     </div>
   </footer>
 </body>
