--- a/crypto/template/faq.html
+++ b/crypto/template/faq.html
@@ -45,14 +45,14 @@
         <p class="page-main__title">Which platform should you use?</p>
         <p>There are a variety of different platforms available from Cryptologi to meet the requirements of different traders with different circumstances.</p>
         <p><b>Cryptologi Webtrader</b> - download this popular, world-renowned desktop platform if you predominately trade in cryptocurrencies. It is both user-friendly and state-of-the-art.</p>
-        <p><b>Cryptologi Mobile</b> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade form anywhere in the world, from a variety of devices.</p>
+        <p><b>Cryptologi Mobile</b> - this solution provides apps for Android, tablets, and iPhone, enabling traders to trade from anywhere in the world, from a variety of devices.</p>
         <p class="page-main__title">What type of information do you need to give in order to trade?</p>
         <p>You are requested to give the following information for proof of identity upon registration:</p>
         <p>A certified, original copy of your passport or ID.</p>
         <p>A utility bill with proof of your mailing address.</p>
-        <p>You will need to clearly indicate the beneficiary name on the Cryptologi Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be to the same beneficiary.</p>
+        <p>You will need to clearly indicate the beneficiary name on the Cryptologi Customer Agreement. It is important that the account beneficiary name corresponds to the name on the customer agreement form, and also the documents for proof of identity. In addition, if you wish to withdraw funds, it must be the same beneficiary.</p>
         <p class="page-main__title">How do you manage your risk?</p>
-        <p class="page-main--pb">The stop loss order and the limit order are the most common risk management tools in Forex trading. A limit order sets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
+        <p class="page-main--pb">The stop-loss order and the limit order are the most common risk management tools in Forex trading. A limit order sets a restriction on the minimum price to be received or the maximum price to be paid. An automatic liquidation at a predetermined price for a particular position is called a stop loss. This is used to limit potential losses if the market moves against an investor’s position.</p>
       </div>
     </div>
   </main>
@@ -88,7 +88,7 @@
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">Cryptologi is a online trading and exchange platform ONLY. It does not carry out any substantial review or independent scrutiny of any blockchain asset, cryptocurrency or related funds. Every client is fully and solely responsible for evaluating your assets and deciding whether or not you want to carry out a blockchain asset exchange with Cryptologi. In so many instances, the blockchain asset you decide to exchange or trade on the basis of your personal findings may not increase or decrease in value, however the asset you have exchanged on the basis of your research may increase in value after the exchange. The past performances does not affect future results. Any investment in any cryptocurrency or blockchain asset involves the risk of a possibility of a loss of part or al of your investment. The value of the asset you trade or exchange is subject to market risk and other forms of investment risk.</p>
+      <p class="page-footer__copyright">Cryptologi is an online trading and exchange platform ONLY. It does not carry out any substantial review or independent scrutiny of any blockchain asset, cryptocurrency or related funds. Every client is fully and solely responsible for evaluating your assets and deciding whether or not you want to carry out a blockchain asset exchange with Cryptologi. In so many instances, the blockchain asset you decide to exchange or trade on the basis of your personal findings may not increase or decrease in value, however, the asset you have exchanged on the basis of your research may increase in value after the exchange. The past performances do not affect future results. Any investment in any cryptocurrency or blockchain asset involves the risk of the possibility of a loss of part or all of your investment. The value of the asset you trade or exchange is subject to market risk and other forms of investment risk.</p>
     </div>
   </footer>
 </body>
