--- a/crypto/template/security.html
+++ b/crypto/template/security.html
@@ -34,21 +34,21 @@
       <div class="container__adv  container__adv--pm">
         <h1>Security</h1>
         <p class="page-main__about--title">Safety is our topmost Priority</p>
-        <p>The safty and security of  our client's funds and information is something we take really seriously. Our strong security protocols gives our clients to opportunity to secure their accounts.</p>
+        <p>The safety and security of  our client's funds and information is something we take really seriously. Our strong security protocols give our clients the opportunity to secure their accounts.</p>
         <p class="page-main__about--title">What is importance of securing your account</p>
-        <p>As a result of the various transactions made with real money, when you makes a deposit you place your money in a Cryptologi account. This is very important that you can control them. If you don't turn on protection feautures in your account, someone can easily get access to the account and make away with your money.</p>
+        <p>As a result of the various transactions made with real money, when you make a deposit you place your money in a Cryptologi account. This is very important that you can control them. If you don't turn on protection features in your account, someone can easily get access to the account and make away with your money.</p>
         <p class="page-main__about--title">Strong password</p>
-        <p>It is very important to use a password unique to you alone. This makes it immpossible for anyone to steal your money. The password should contain at least a minimum of 8 characters and it should be comprised of small letters, big letters, digits and sometimes even special character (!, # &) as the case may be.</p>
+        <p>It is very important to use a password unique to you alone. This makes it impossible for anyone to steal your money. The password should contain at least a minimum of 8 characters and it should be comprised of small letters, big letters, digits and sometimes even special characters (! # &) as the case may be.</p>
         <p class="page-main__about--title">Two factor authentication(2FA)</p>
-        <p>This special feature is available to provide another level of authentication and verification of the right and legal user of an account. With 2FA enabled, you give your account another layer of protection: usually a one time code that can only be sent to your mobile devices.</p>
-        <p class="page-main__about--title">Our site, services and personel</p>
-        <p>Every online service and communication occur over secured and trusted channels. The various wallets are stored and kept making us of a PGP encryption. No personal of Cryptologi has direct access to any customer's Bitcoin funds. Likewise no one will ask you for the password to your personal account. We run an impressive but yet simple financial and security  auditing. This gives our customer a gurantee that their funds well safe and accounted for. Every staff member pass a background check, they receive qualitative training and are expected to adhere to each and every of the compny's policy.</p>
+        <p>This special feature is available to provide another level of authentication and verification of the right and legal user of an account. With 2FA enabled, you give your account another layer of protection: usually, a one-time code that can only be sent to your mobile devices.</p>
+        <p class="page-main__about--title">Our site, services, and personel</p>
+        <p>Every online service and communication occur over secured and trusted channels. The various wallets are stored and kept making us of a PGP encryption. No personal of Cryptologi has direct access to any customer's Bitcoin funds. Likewise, no one will ask you for the password to your personal account. We run an impressive but yet simple financial and security  auditing. This gives our customer a guarantee that their funds well safe and accounted for. Every staff member passes a background check, they receive qualitative training and are expected to adhere to each and every of the company's policy.</p>
         <h1>AML & KYC</h1>
         <p>Cryptologi exchange is strongly against the act of money laundering and any form of financing terrorism. It consists of:</p>
         <ul>
           <li>Verification of your account: before a payment is carried out, any user or customer that wants to pay in fiat currencies has to verify their account</li>
           <li>Safety PIN code: a 4 digit code is expected to be set up during account registration. If our customer service is contacted for  anything, no information would be released without the PIN code</li>
-          <li>Transfer delay or account blooking: we can block, suspend or deactivate an account in the case when a crime is suspected</li>
+          <li>Transfer delay or account blocking: we can block, suspend or deactivate an account in the case when a crime is suspected</li>
           <li>Singular user, one account: one person is allowed to own only one account on Cryptologi</li>
         </ul>
         <p class="page-main--pb">Digital currencies are rapidly changing the financial landscape, and the Cryptologi team is at the forefront of this revolution. If you’re looking to work on something truly global and with a smart and ambitious team that highly values diversity, teamwork, and the continuous quest for excellence, then this is the opportunity for you.</p>
@@ -87,7 +87,7 @@
           </ul>
         </div>
       </div>
-      <p class="page-footer__copyright">Cryptologi is a online trading and exchange platform ONLY. It does not carry out any substantial review or independent scrutiny of any blockchain asset, cryptocurrency or related funds. Every client is fully and solely responsible for evaluating your assets and deciding whether or not you want to carry out a blockchain asset exchange with Cryptologi. In so many instances, the blockchain asset you decide to exchange or trade on the basis of your personal findings may not increase or decrease in value, however the asset you have exchanged on the basis of your research may increase in value after the exchange. The past performances does not affect future results. Any investment in any cryptocurrency or blockchain asset involves the risk of a possibility of a loss of part or al of your investment. The value of the asset you trade or exchange is subject to market risk and other forms of investment risk.</p>
+      <p class="page-footer__copyright">Cryptologi is an online trading and exchange platform ONLY. It does not carry out any substantial review or independent scrutiny of any blockchain asset, cryptocurrency or related funds. Every client is fully and solely responsible for evaluating your assets and deciding whether or not you want to carry out a blockchain asset exchange with Cryptologi. In so many instances, the blockchain asset you decide to exchange or trade on the basis of your personal findings may not increase or decrease in value, however, the asset you have exchanged on the basis of your research may increase in value after the exchange. The past performances do not affect future results. Any investment in any cryptocurrency or blockchain asset involves the risk of the possibility of a loss of part or all of your investment. The value of the asset you trade or exchange is subject to market risk and other forms of investment risk.</p>
     </div>
   </footer>
 </body>
