--- a/crypto/template/careers.html
+++ b/crypto/template/careers.html
@@ -33,16 +33,16 @@
     <div class="container">
       <div class="container__info  container__adv--pm">
         <h1>Be a part of our amazing team</h1>
-        <p>Bitcoin and Ethereum are fast transforming and changing the global financial stratosphere and the Cryptologi team is rightly positioned in this revolution. Cryptologi is a global financial trading company with an international team of experts that proffer solutions to all forms of challenges a trader or investor might encounter in the process of trading. The team of individuals that work for us are always quick to do and well experienced in different areas as pertaining to trading. We learn from each other and inspire one another in different ways. At Cryptologi our ideas and values are centered around a properly efficient and functioning community. This drives and propels our community towards success, and our achievements are remarkable and mind blowing. All these qualities define what we stand for, and what makes us distinct from any other financial trading company.</p>
+        <p>Bitcoin and Ethereum are fast transforming and changing the global financial stratosphere and the Cryptologi team is rightly positioned in this revolution. Cryptologi is a global financial trading company with an international team of experts that proffer solutions to all forms of challenges a trader or investor might encounter in the process of trading. The team of individuals that work for us are always quick to do and well experienced in different areas as pertaining to trading. We learn from each other and inspire one another in different ways. At Cryptologi our ideas and values are centered around a properly efficient and functioning community. This drives and propels our community towards success, and our achievements are remarkable and mind-blowing. All these qualities define what we stand for, and what makes us distinct from any other financial trading company.</p>
         <p class="page-main__about--title">A community oriented company</p>
-        <p>In Cryptologi our first and topmost priority is caring and meeting to the needs of our customers, and offering them the best of services with no sort of limitation or difficulty. Here we work as a team to accomplish all our set targets and goals. We are fully aware of the positive impact the technology behind cryptocurrencies will have on the economy. We are therefore responsible in ensuring it comes to the limelight and available to people in a responsible and appropriate manner.</p>
-        <p class="page-main__about--title">High quality obsession</p>
-        <p>This refers to the type of people we have on our team. To a very large extent every member of our team are all professionals in their various fields. We do everything in our power to hire the best of the best. We have a very high standard when it comes to employment and recruitment of staff and personnel. We pay a high attention to detail and take a lot of pride in the things we do.</p>
+        <p>In Cryptologi our first and topmost priority is caring and meeting the needs of our customers, and offering them the best of services with no sort of limitation or difficulty. Here we work as a team to accomplish all our set targets and goals. We are fully aware of the positive impact the technology behind cryptocurrencies will have on the economy. We are therefore responsible for ensuring it comes to the limelight and available to people in a responsible and appropriate manner.</p>
+        <p class="page-main__about--title">High-quality obsession</p>
+        <p>This refers to the type of people we have on our team. To a very large extent every member of our team is all professionals in their various fields. We do everything in our power to hire the best of the best. We have a very high standard when it comes to employment and recruitment of staff and personnel. We pay a high attention to detail and take a lot of pride in the things we do.</p>
         <p class="page-main__about--title">We’re characterized by distinctive efficiency</p>
-        <p>Cryptologi everything we do is geared toward efficiency. This means we don't waste any of our resources. We are very quick in making the right decisions. As a member of this team you are most certain to get right up-to date information. The kind of relationship that exists between each and every member is the best there is.</p>
+        <p>Cryptologi everything we do is geared toward efficiency. This means we don't waste any of our resources. We are very quick in making the right decisions. As a member of this team you are almost certain to get right up-to-date information. The kind of relationship that exists between each and every member is the best there is.</p>
         <h1>Job type</h1>
         <p class="page-main__careers--title">1. country associate – Cyprus</p>
-        <p>Cryptologi is a top world class cryptocurrency company that operates in several countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
+        <p>Cryptologi is a top world class cryptocurrency company that operates in several countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every one of our customers.</p>
         <p class="page-main__about--title">What you’ll do</p>
         <ul>
           <li>Take ownership of the market and drive market leadership & success</li>
@@ -61,7 +61,7 @@
           <li>A valid work visa if you are not a South African national. The position is based at our Cape Town office. </li>
           <li>Preferably a basic knowledge of how crypto-currencies like Bitcoin work, and enthusiasm to promote cryptocurrencies</li>
           <li>Ability to handle industry and regulatory complexities</li>
-          <li>Some one who thinks on their feet and gets things done</li>
+          <li>Someone who thinks on their feet and gets things done</li>
           <li>Entrepreneurial, strong sense of responsibility and very high level of integrity</li>
           <li>Excellent interpersonal, communication and negotiation skills</li>
           <li>Friendly, transparent, articulate and driven to succeed </li>
@@ -70,11 +70,11 @@
         <p>Please make sure you submit a cover letter describing why you're interested in Cryptologi and the role and what makes you the right candidate.</p>
         <p>Digital currencies are and changing the global financial stratosphere and Cryptologi team is rightly positioned at this revolution. Cryptologi is a global financial trading company with an international team of experts that proffer solutions to all forms of challenges a trader or investor might encounter in the process of trading.</p>
         <p class="page-main__careers--title">2. Compliance Analyst - Italy</p>
-        <p>Cryptologi is a top world class cryptocurrency company that operates in several countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
+        <p>Cryptologi is a top world class cryptocurrency company that operates in several countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of everyone of our customers.</p>
         <p class="page-main__about--title">What you'll do</p>
         <ul>
           <li>Support Cryptologi's compliance efforts across multiple geographies</li>
-          <li>Design risk based rules and investigate suspicious activity flagged by the system</li>
+          <li>Design risk-based rules and investigate suspicious activity flagged by the system</li>
           <li>Follow policies and procedures to ensure compliance with regulations, including but not limited to Anti Money Laundering (AML) and Know Your Customers (KYC)</li>
           <li>Play a key role in the continuous development and monitoring of the internal audit function</li>
           <li>Conduct enhanced due diligence reviews of customers and research, organize, file and document the outcomes of the reviews</li>
@@ -99,7 +99,7 @@
         </ul>
         <p>Digital currencies are rapidly changing the financial landscape, and the Cryptologi team is at the forefront of this revolution. If you’re looking to work on something truly global and disruptive with a smart and ambitious team that highly values diversity, teamwork, and the continuous quest for excellence, then this is the opportunity for you.</p>
         <p class="page-main__careers--title">3. Senior Software Engineer - Italy</p>
-        <p>Cryptologi is a top world class cryptocurrency company that operates in several countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of every of our customers.</p>
+        <p>Cryptologi is a top world class cryptocurrency company that operates in several countries all over the globe, with offices located in strategic places in the different continents in the world. Cryptologi is a company that has been tested and trusted by many top brokers and financial investors, and many have long fallen in love with this financial company. The different services we offer to our clients on a daily basis makes trading simple and fun. With Cryptologi you have nothing to worry about all transactions are 100% secure. Our number one priority is satisfying the need of everyone of our customers.</p>
         <p class="page-main__about--title">What you'll do</p>
         <ul>
           <li>As a Software Engineer at Cryptologi, you will work on solving many complicated and interesting problems</li>
@@ -112,11 +112,11 @@
         <ul>
           <li>A work permit for South Africa if you are not a South African citizen</li>
           <li>A solid foundation in computer science in areas such as algorithms, data structures, distributed computing, software design</li>
-          <li>Extensive programming experience in languages such as Go, Ruby and JavaScript</li>
+          <li>Extensive programming experience in languages such as Go, Ruby, and JavaScript</li>
           <li>Knowledge of technologies like SQL, Ajax, HTML, networking</li>
-          <li>BSc/MSc/PhD in computer science or other technical discipline, or equivalent working experience</li>
+          <li>BSc/MSc/PhD in computer science or another technical discipline, or equivalent working experience</li>
           <li>Be friendly, transparent, articulate and driven to succeed</li>
-          <li>A passion for cryptography, security and Bitcoin</li>
+          <li>A passion for cryptography, security, and Bitcoin</li>
         </ul>
         <p class="page-main--pb">Digital currencies are and changing the global financial stratosphere and Cryptologi team is rightly positioned at this revolution. Cryptologi is a global financial trading company with an international team of experts that proffer solutions to all forms of challenges a trader or investor might encounter in the process of trading.</p>
       </div>
