--- a/crypto-b/templates/faq.html
+++ b/crypto-b/templates/faq.html
@@ -41,16 +41,16 @@
       <div class="page-header__rules">
         <h1>Faq</h1>
         <b>How do I cancel an order?</b>
-        <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
+        <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right-hand side of the order.</p>
         <b>Do you allow VPN/Tor connections?</b>
-        <p>Yes we do, however for best performance of the +500crypto web interface and API we recommend using a good and fast connection.</p>
+        <p>Yes, we do, however for best performance of the +500crypto web interface and API we recommend using a good and fast connection.</p>
         <b>Can I trade on margin?</b>
-        <p>Currently Margin trading is disabled. Please subscribe to our blog for more updates.</p>
+        <p>Currently, Margin trading is disabled. Please subscribe to our blog for more updates.</p>
         <b>What is a limit order?</b>
-        <p>Placing a limit order lets you decide what price you wish to buy or sell at. Your order will be added to the order book and will execute when someone submits a matching order.</p>
+        <p>Placing a limit order lets you decide what price you wish to buy or sell it. Your order will be added to the order book and will execute when someone submits a matching order.</p>
         <b>What is the order book?</b>
         <p>The order book is a list of all open (unfilled) buy and sell orders. You can buy or sell digital currency at any price listed.</p>
-        <b>Why is my order stuck as an open order?</b>
+        <b>Why is my order stuck with an open order?</b>
         <p>Newly placed orders first enter the order book as an "open order". When some of your "open order" matches with another order, it becomes a "partially matched order". When all of your order matches with another user's order, it becomes a "fully matched order" or "completed order". Completed orders are removed from the order book.</p>
         <b>Is there a fee to transfer funds to and from +500crypto?</b>
         <p>+500crypto does not charge any transfer fees for moving funds between your Coinbase account and +500crypto account.</p>
