--- a/crypto-b/templates/terms.html
+++ b/crypto-b/templates/terms.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Trading Guide - +500crypto</title>
+  <title>Terms & Condition - +500crypto</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -45,7 +45,7 @@
           <li>Only one account is allowed per person.</li>
           <li>The information contained on this website does not constitute accounting, legal, financial, consulting investment or other professional advice. You bear all the risks from any decision to hold, purchase or sell bitcoin on this website and +500crypto will not be liable for any loss suffered.</li>
           <li>You agree that you will not use the products and services to facilitate any illegal activities.</li>
-          <li>You agree that you will not use the products and services to engage in any activites listed on the Prohibited Activities list</li>
+          <li>You agree that you will not use the products and services to engage in any activity listed on the Prohibited Activities list</li>
           <li>Your account may be terminated if you provide false information or refuse to provide information about your true identity.</li>
           <li>You agree and consent to receive communications from +500crypto via email and SMS.</li>
           <li>+500crypto may change the Terms of Use at any time for any reason without notice.</li>
@@ -55,7 +55,7 @@
           <li>The Bitcoin network is responsible for confirming Bitcoin transactions and +500crypto is not liable for any loss due to, but not limited to, errors in the protocol, delays or any other breakdown relating to the Bitcoin network.</li>
           <li>You acknowledge that +500crypto cannot confirm, cancel or reverse Bitcoin transactions.</li>
           <li>You expressly agree that +500crypto is not liable for any errors, loss or omissions due to sending Bitcoin to or receiving Bitcoin from incorrect wallet addresses, e-mail addresses, entering incorrect transaction amounts, or any other information related to Bitcoin transactions by using the service. Please ensure that you use the correct Bitcoin addresses, e-mail addresses, transaction amounts when transacting.</li>
-          <li>Bitcoin is securely stored in a combination of online and offline storage. As a result it may take up to 48 hours or more to facilitate Bitcoin transactions. By using +500crypto you accept the risk that transactions may be delayed and you agree not to hold +500crypto liable for any damages or loss due to delays.</li>
+          <li>Bitcoin is securely stored in a combination of online and offline storage. As a result, it may take up to 48 hours or more to facilitate Bitcoin transactions. By using +500crypto you accept the risk that transactions may be delayed and you agree not to hold +500crypto liable for any damages or loss due to delays.</li>
         </ul>
         <b>+500crypto Exchange</b>
         <ul>
@@ -68,13 +68,13 @@
           <li>Outgoing payments from +500crypto can only be done by means of electronic funds transfer (EFT) to your confirmed bank account in your country of residence. The bank account must be opened in your own name.</li>
           <li>+500crypto does not guarantee Bitcoin or bank transfer disbursement times and will not be liable for any delays.</li>
           <li>You must provide security for trading Bitcoin by funding your account in advance of trading.</li>
-          <li>Trade orders placed on the site are binding and cannot be cancelled or reversed.</li>
+          <li>Trade orders placed on the site are binding and cannot be canceled or reversed.</li>
           <li>+500crypto has no obligation to accept orders, in which case the site will not allow the order to be placed.</li>
-          <li>Orders, deposits and withdrawals are subject to limits which may be changed over time.</li>
+          <li>Orders, deposits, and withdrawals are subject to limits which may be changed over time.</li>
           <li>+500crypto may suspend your account at any time for any reason.</li>
           <li>This service is provided without warranty of any kind and +500crypto does not guarantee that the site will be available 100% of the time. You acknowledge and accept that the website may become unavailable from time to time due to various circumstances and that +500crypto will not be liable for any losses due to the system or service becoming unavailable.</li>
           <li>+500crypto cannot and does not guarantee the value of Bitcoin and has no obligation to buy back Bitcoin at any time.</li>
-          <li>It is your responsibility to determine, account and pay for any taxes that apply to your trading and Bitcoin transactions.</li>
+          <li>It is your responsibility to determine, account and pay any taxes that apply to your trading and Bitcoin transactions.</li>
         </ul>
         <b>Prohibited Activities</b>
         <b>You may not use +500crypto products or services to engage in any of the following activities:</b>
@@ -86,7 +86,7 @@
               <li>Narcotics, steroids, drugs or other controlled substances</li>
               <li>Drug paraphernalia</li>
               <li>Items that promote or facilitate illegal activity</li>
-              <li>Stolen goods</li>
+              <li>Stolen Goods</li>
               <li>Items that promote or facilitate hate, violence or racial intolerance</li>
               <li>Items that are considered obscene</li>
               <li>Items that are counterfeit or otherwise infringe or violate copyright, trademarks or other intellectual property</li>
